<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradientbg"
    android:gravity="center_vertical|top"
    android:padding="5dip"
    android:orientation="vertical">

   <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dip"
         android:text="@string/units"
         android:textColor="#000000"
         android:textSize="15sp"
         android:textStyle="bold"/>
      <EditText android:id="@+id/units"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/typenumber"
         android:inputType="numberDecimal|numberSigned"
         android:maxLines="1"/>
   </LinearLayout>
   <Spinner android:id="@+id/conversions"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/prompt"/>
   <LinearLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

      <Button
          android:id="@+id/clear"
          style="android:buttonBarStyle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/clear" />

      <Button
          android:id="@+id/convert"
          style="android:buttonBarStyle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/convert" />

      <Button
          android:id="@+id/close"
          style="android:buttonBarStyle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/close" />

      <Button
          android:id="@+id/test"
          style="android:buttonBarStyle"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/test" />

   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/result"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textStyle="bold" />

       <TextView
           android:id="@+id/result"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text=""
           android:textAppearance="?android:attr/textAppearanceLarge" />
   </LinearLayout>

</LinearLayout>
